tests/error/function_arg_no_size.gw
#! [contains] cannot declare variables of size
fun void test(void v){}
